# snowglobes

./: .gitignore  Plotter.ipynb  README.md  create_effc.py  make_event_table.pl  make_event_table_lead.pl  supernova.pl
.github/workflows/: publish_to_pypi.yml
channels/: README
doc/tex_src/: .gitignore  Makefile  refs.bib  snowglobes_1.0.tex  snowglobes_1.1.tex  snowglobes_1.2-draft.tex  snowglobes_1.2.tex  snowglobes_1.3-draft.tex  snowglobes_1.3.tex  snowglobes_latest.tex
effic/: create_effc.py
fluxes/: Makefile  README.pinched  oscillate_flux.C  oscillate_flux.cc  pinched.C  pinched.cc  run_pinched.pl  stpi_flux.C  supernova_mixing.cc  supernova_mixing.h
fluxes/garching/: README  alpha_nue_garching.txt  alpha_nuebar_garching.txt  alpha_numu_garching.txt  avgen_nue_garching.txt  avgen_nuebar_garching.txt  avgen_numu_garching.txt  luminosity_nue_garching.txt  luminosity_nuebar_garching.txt  luminosity_numu_garching.txt  make_garching_fluxes.C
glb/: detector.glb  flux.glb  postamble.glb  postamble_SN.glb  postamble_he.glb  preamble.glb
plots/: Plotter.ipynb  garching_time_plot.C  graphs_gvkm_argon_ar17kt.root  graphs_livermore_argon_ar17kt.root  make_event_rates.C  make_xscn_graphs.C  plot_event_rates.C  plot_event_rates.ipynb  plot_flux.C  plot_fluxes.ipynb  plot_garching.C  plot_xscn_graphs.C  plot_xscns_graphs.C  plot_xscns_lead.C  plot_xscns_snwp.ipynb  xscn_plotter.py
smear/: interaction_nue_Ar40_MARLEY.ssv
smearing_code/: README  apply_blur.py  create_smearing_matrix.py  example.json  smear.C  smear_plotter.py
smearing_code/.ipynb_checkpoints/: create_smearing_matrix-checkpoint.py
smearing_code/dukecevns/: DetectorResponse.cc  DetectorResponse.h  FormFactor.cc  FormFactor.h  Makefile  NuFlux.cc  NuFlux.h  README.md  arpoly.txt  bootstrap.sh  cevns_recoil_response.cc  isomaps.h  lar_sns.cc  mixtures.h  sns_rates.cc  supernova_diff_rates.cc  xscns.cc  xscns.h
smearing_code/example_files/: example_e_scatter.json  example_lar.json  example_nc_scint.json
smearing_code/interaction/: interaction_unit_matrix.ssv  (+3 more)
snowglobes_data/: README.md  build.sh  pyproject.toml  setup.sh
src/: Makefile  myio.c  myio.h  supernova  supernova.c
(+18 files in other folders)
