[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowglobes_data"
version = "1.3"
authors = [{name="SNOwGLoBES Contributors"}]
description = "Data files included as part of SNOwGLoBES"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Homepage" = "https://github.com/SNOwGLoBES/snowglobes"
"Bug Tracker" = "https://github.com/SNOwGLoBES/snowglobes/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["snowglobes_data",
           "snowglobes_data.channels",
           "snowglobes_data.effic.*",
           "snowglobes_data.smear.*",
           "snowglobes_data.xscns"]

[tool.setuptools.package-data]
"*" = ["*.dat"]